--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,4 +11,7 @@ jobs:
   steps:
     - name : Deploy in EC2
       env:
+        PRIVATE_KEY :$ {{ secrets.SSH_KEY }}
+        HOST_NAME :$ {{ secrets.HOST_NAME }}
+        USER_NAME :$ {{ secrets.USER_NAME }}
         
