--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,26 @@
-name : Flask Deployment
-on : 
+name: Flask Deployment
+on: 
   push:
     branches: [main]
 
 jobs:
-  Deploy :
-    name : Deploy to ec2
-    runs-on : ubuntu-latest
+  Deploy:
+    name: Deploy to EC2
+    runs-on: ubuntu-latest
 
-  steps:
-    - name : Deploy in EC2
+    steps:
+    - name: Deploy in EC2
       env:
-        PRIVATE_KEY :$ {{ secrets.SSH_KEY }}
-        HOST_NAME :$ {{ secrets.HOST_NAME }}
-        USER_NAME :$ {{ secrets.USER_NAME }}
-        
+        PRIVATE_KEY: ${{ secrets.SSH_KEY }}
+        HOST_NAME: ${{ secrets.HOST_NAME }}
+        USER_NAME: ${{ secrets.USER_NAME }}
+      run: |
+        echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
+        ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOST_NAME} "
+        ls && 
+        cd Git_flask_automation/ &&
+        ls &&
+        git pull &&
+        sudo systemctl stop flaskapp &&
+        sudo systemctl daemon-reload &&
+        sudo systemctl start flaskapp"
